UPIM/rcsdk.h

	struct RcTargetEntry
	{
		char targetId[64];		//交互方id(接收方id)
		char targetName[256];	//交互方的userid
	};
/*
jobj
{
"result":"falied/success",
"err_code":0/1,
"blockUsers":"1122"
}
*/
typedef void(__stdcall *BlacklistInfoListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"result":"falied/success",
"err_code":0/1,	//操作结果 0-成功 非0-失败
"msgUId":"",
"timestamp":12345
}
*/
typedef void(__stdcall *PublishAckListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"data":"hello",
}
*/

typedef void(__stdcall *ChatroomInfoListenerCallback)(const wchar_t* json_str);
typedef void(__stdcall *NaviDataListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"result": "falid/success",
"err_code": 0/1,				//错误码
"startTime": 1122				//开始时间
"spanMins" : 11221				//时间间隔
}
*/
typedef void(__stdcall *PushSettingListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"result":"falid/success",
"discussionId":"7788",			//讨论组id
"err_code":0/1					//错误码
}
*/
typedef void(__stdcall *CreateDiscussionListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"opStatus":0,		//操作结果    0-成功 非0-失败
"bizStatus":0		//业务数据值  根据具体业务返回响应的业务数据值
}
*/
typedef void(__stdcall *BizAckListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"process": 7  //进度值
}
jobj
{
"result":"falid/success",
"url":"http//....",             //信息描述 成功，返回图片uri 失败 返回错误描述
"err_code":0/1					//错误码 0 - 成功 非0 - 失败
}
*/
typedef void(__stdcall *ImageListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"m_TargetId":"99",          //交互方id
"m_SenderId": "" ,          //发方id
"m_ClazzName":"",		    //类别
"m_ExtraMessage":"",        //信息
"m_ExtraMessage":"",        //附加信息
"m_Push":"",                //推送消息
"m_AppData":"",             //AppData
"m_ConversationType":0,     //通道类型  1-PRIVATE 2-DISCUSSION 3-GROUP 4-CHATROOM 5-CUSTOMSERVICE
"m_MessageId":9,            //消息id   消息在数据库中的id号
"m_Direction":0,            //消息方向  0-发送的消息 1-接收的消息
"m_ReadStatus":0,           //读取状态  0-未读 1-已读
"m_SendStatus":20,          //发送状态  10-发送中 20-发送失败 30-发送成功
"m_SendTime":9,             //接收时间
"m_RcvTime":9,              //接收时间
"m_MessageType":0		    //信息类别  0-实时接收信息 1-历史漫游
}
*/
typedef void(__stdcall *MessageInfoCallback)(const wchar_t* json_str);
/*
jobj
{
"result":"falid/success",
"count":0					//数量
"data":jobj,				//CsharpDiscussionInfo 请参见下面讨论组数据结果
"err_code":0/1				//错误码
}
*/
typedef void(__stdcall *DiscussionInfoListenerCallback)(const wchar_t* json_str);
/*
jobj
{
"m_Id":"99",				//讨论组或群组id
"m_Name": "" ,				//讨论组名称
"m_AdminId":"",				//管理员id
"m_UserIds":"",				//群组成员id,使用\n分割
"m_ConversationType":1,		//通道类型 1-PRIVATE 2-DISCUSSION 3-GROUP 4-CHATROOM 5-CUSTOMSERVICE
"m_InviteStatus":0,			//开放邀请状态   0 - 开放邀请 1 - 关闭开放邀请
"m_BlockPush":0				//新消息通知阻止状态 0 - 未阻止 100 - 阻止
}
*/
typedef void(__stdcall *DiscussionInfoSyncCallback)(const wchar_t* json_str);
/*
jobj
{
"result":"success/failed"
"err_code":1,
"data":"fdsgsdgs"
}
*/
typedef void(__stdcall *TokdenListenerCallback)(const wchar_t* json_str);
	/**
	*  下载文件
	*
	*  @param targetId   交互方id
	*  @param categoryId 通道类型
	*  @param nType      媒体类型 1 - Image 2 - Audio 3 - Video
	*  @param pszUrl     媒体网络地址
	*  @param callback  图片监听器 推送：进度 操作结果：成功 推送网络地址 失败 失败原因
	*/
	WIN_RCSDK_API void DownLoadFile(const char* targetId, int categoryId, int nType, const char* pszUrl, ImageListenerCallback callback, ImageListenerCallback process_callback);
	/*
	************************************************
	*  讨论组相关函数
	************************************************
	*/

	/**
	*  创建讨论组
	*
	*  @param discussionName 讨论组名称
	*  @param userIds        邀请成员id数组
	*  @param idCount        数组元素个数
	*  @param callback       监听器 推送 成功 - 讨论组id 失败 - 出错原因
	*/
	WIN_RCSDK_API void CreateDiscussion(const char*  discussionName, RcTargetEntry userIds[], int idCount, CreateDiscussionListenerCallback callback);
	/**
	*  退出讨论组
	*
	*  @param discussionId  讨论组id
	*  @param callback      监听器 推送 0 - 成功 非0 - 失败
	*/
	WIN_RCSDK_API void QuitDiscussion(const char* discussionId, PublishAckListenerCallback callback);
	/**
	*  邀请加入讨论组
	*
	*  @param discussionId 讨论组id
	*  @param userIds      用户id数组
	*  @param idCount      数组原始个数
	*  @param callback     监听器 推送 0 - 成功 非0 - 失败
	*/
	WIN_RCSDK_API void AddMemberToDiscussion(const char* discussionId, RcTargetEntry userIds[], int idCount, PublishAckListenerCallback callback);
	/**
	*  将某人踢出讨论组
	*
	*  @param discussionId 讨论组id
	*  @param userId       踢出的用户id
	*  @param callback     监听器 推送 0 - 成功 非0 - 失败
	*/

	WIN_RCSDK_API void RemoveMemberFromDiscussion(const char* discussionId, const char* userId, PublishAckListenerCallback callback);
	/**
	*  获取讨论组信息 从服务器获取
	*
	*  @param discussionId 讨论组id
	*  @param categoryId   通道类型 只能是 discussion ，此参数稍后将被去掉
	*  @param callback     监听器 推送 0 - 成功，返回讨论组信息 非0 - 失败
	*/
	WIN_RCSDK_API void GetDiscussionInfo(const char* discussionId, int categoryId, DiscussionInfoListenerCallback callback);
	//从本地数据库获取
	WIN_RCSDK_API bool GetDiscussionInfoSync(const char* discussionId, int categoryId, DiscussionInfoSyncCallback callback);
	/**
	*  讨论组改名
	*
	*  @param discussionId   讨论组id
	*  @param discussionName 讨论组名称
	*  @param callback       监听器 推送 0 - 成功 非0 - 失败
	*/

	WIN_RCSDK_API void RenameDiscussion(const char* discussionId, const char* discussionName, PublishAckListenerCallback callback);
	/**
	*  设置讨论组开放成员邀请
	*
	*  @param discussionId 讨论组id
	*  @param inviteStatus 邀请状态 0 - 开放邀请 1 - 关闭开放邀请
	*  @param callback     监听器 推送 0 - 成功 非0 - 失败
	*/
	WIN_RCSDK_API  void SetDiscussionInviteStatus(const char* discussionId, int inviteStatus, PublishAckListenerCallback callback);
	/*
	************************************************
	*  群组相关函数
	************************************************
	*/

	/**
	*  同步群组，将群组发送到服务器
	*
	*  @param groupIds 群组id数组
	*  @param idCount  数组元素个数
	*  @param callback 监听器 推送 0 - 成功 非0 - 失败
	*/
	WIN_RCSDK_API void SyncGroups(RcTargetEntry groupIds[], int idCount, PublishAckListenerCallback callback);
	/**
	*  加入群组，将群组发送到服务器
	*
	*  @param groupIds 群组id数组
	*  @param idCount  数组元素个数
	*  @param callback 监听器 推送 0 - 成功 非0 - 失败
	*/
	WIN_RCSDK_API void JoinGroup(RcTargetEntry groupIds[], int idCount, PublishAckListenerCallback callback);
	/**
	*  退出群组，将群组发送到服务器
	*
	*  @param groupIds 群组id数组
	*  @param idCount  数组元素个数
	*  @param callback 监听器 推送 0 - 成功 非0 - 失败
	*/
	WIN_RCSDK_API void QuitGroup(RcTargetEntry groupIds[], int idCount, PublishAckListenerCallback callback);
	/**
	*  加入聊天室
	*
	*  @param targetId 聊天室id
	*  @param categoryId 通道类型
	*  @param callback 监听器 推送 0 - 成功 非0 - 失败
	*  @param count 要拉取聊天室的消息条数
	*  @param flag = false(一般情况下为false) 为true 不清除消息
	*/
	//加入聊天室
	WIN_RCSDK_API void JoinChatRoom(const char* targetId, int categoryId, int count, PublishAckListenerCallback callback, bool flag = false);
	/**
	*  加入已经存在的聊天室
	*
	*  @param targetId 聊天室id
	*  @param categoryId 通道类型
	*  @param count 要拉取聊天室的消息条数
	*  @param callback 监听器 推送 0 - 成功 非0 - 失败
	* 
	*/
	WIN_RCSDK_API void JoinExistingChatRoom(const char* targetId, int categoryId, int count, PublishAckListenerCallback callback);
	//退出聊天室

	WIN_RCSDK_API void QuitChatRoom(const char* targetId, int categoryId, PublishAckListenerCallback callback);
	/**
	*  查询聊天室成员信息
	*
	*  @param targetId 聊天室id
	*  @param count 拉取count成员的信息
	*  @param order - 1 升序返回最早加入的 - 2 降序返回最早加入聊天室的成员
	*  @param callback 返回聊天室的成员信息信息
	*
	*/
	WIN_RCSDK_API void QueryChatroomInfo(const char* targetId, int count, int order, ChatroomInfoListenerCallback callback);
	/*
	************************************************
	*  黑名单系列函数
	************************************************
	*/

	/**
	*  加入黑名单
	*
	*  @param userId   用户id
	*  @param callback 监听器 推送 0 - 成功 非0 - 失败
	*/

	WIN_RCSDK_API void AddToBlacklist(const char* userId, PublishAckListenerCallback callback);
	/**
	*  移出黑名单
	*
	*  @param userId   用户id
	*  @param callback 监听器 推送 0 - 成功 非0 - 失败
	*/

	WIN_RCSDK_API void RemoveFromBlacklist(const char* userId, PublishAckListenerCallback callback);
	/**
	*  获取用户黑名单状态
	*
	*  @param userId   用户id
	*  @param callback 监听器 推送 0 - 成功 非0 - 失败
	*/
	WIN_RCSDK_API void GetBlacklistStatus(const char* userId, BizAckListenerCallback callback);
	/**
	*  获取黑名单列表
	*
	*  @param callback 监听器 推送 0 - 黑名单列表信息 非0 - 失败
	*/

	WIN_RCSDK_API void GetBlacklist(BlacklistInfoListenerCallback callback);
	/**
	*  设置关闭push时间
	*
	*  @param startTime 关闭起始时间 格式 HH:MM:SS
	*  @param spanMins  间隔分钟数 0 < t < 1440
	*/

	WIN_RCSDK_API void SetNotificationQuietHours(const char* startTime, int spanMins, PublishAckListenerCallback callback);
	//通知服务器移除push设置
	WIN_RCSDK_API void RemoveNotificationQuietHours(PublishAckListenerCallback callback);
	//从服务器查询push设置
	WIN_RCSDK_API void GetNotificationQuietHours(PushSettingListenerCallback callback);
	/**
	*  接收应用的环境改变事件通知
	*
	*  @param nType     事件类型，101-网络切换，102-应用进入后台，103-应用进入前台，104-锁屏，105-心跳，106-屏幕解锁
	*  @param pbData    依据nType的事件附加数据，待定
	*  @param nDataSize 数据大小，字节数
	*  @param callback 事件改变的回调
	*/
	WIN_RCSDK_API  void EnvironmentChangeNotify(int nType, const char* pbData, int nDataSize);
	/**
	*  设置设备信息
	*
	*  @param manufacturer 设备生产商
	*
	*  @param model 设备型号
	*
	*  @param osVersion 设备系统版本
	*
	*  @param network 设备当前使用的网络
	*
	*  @param networkOperator 网络运营商
	*/
	WIN_RCSDK_API void SetDeviceInfo(const char* manufacturer, const char* model, const char* osVersion, const char* network, const char* networkOperator);
	//查询公共账号信息
	WIN_RCSDK_API void SearchPublicServiceProfile(const char* targetId, int businessType, int searchType, PublishAckListenerCallback callback);
	//设置用户数据 发送到服务起
	WIN_RCSDK_API void SetUserData(const char* ext, PublishAckListenerCallback callback);
	//从服务起获取用户数据
	WIN_RCSDK_API void GetUserData(CreateDiscussionListenerCallback callback);
	//获取用户的id通过token
	WIN_RCSDK_API bool GetUserIdByToken(const char* token, char* data, int& length);
	/**
	*  设置导航数据监听(私有云 wps)
	*
	*  @param listener 监听器
	*/

	WIN_RCSDK_API void SetNaviDataListener(NaviDataListenerCallback callback);
	/**
	*  (本地数据库)从讨论组移除某人
	*
	*  @param discussionId  讨论组id
	*  @param userId        用户id
	*/
	WIN_RCSDK_API bool RemoveMemberFromDiscussionSync(const char* discussionId, const char* userId);
	/**
	*  用户信息Key值，用户自定义信息
	*
	*  @param name       名称
	*  @param info       信息内容
	*  @param callback   处理方法
	*/
	WIN_RCSDK_API void UploadUserInfo(const char* name, const char* info, bool flag, TokdenListenerCallback callback);
	/**
	*  通过消息id获取整条消息
	*
	*  @param msgId       消息id
	*/
	WIN_RCSDK_API bool GetMessageById(long msgId, MessageInfoCallback callback);
	/**
	*  删除制定id用户消息
	*
	*  @param messageUId  消息id
	*/
	WIN_RCSDK_API bool RecallMessage(const char* messageUId);
	// WAVE音频采样频率是8khz 
	// 音频样本单元数 = 8000*0.02 = 160 (由采样频率决定)
	// 声道数 1 : 160
	//        2 : 160*2 = 320
	// bps决定样本(sample)大小
	// bps = 8 --> 8位 unsigned char
	//       16 --> 16位 unsigned short
	WIN_RCSDK_API int EncodeWavToAmr(const char* pchWAVEFilename, const char* pchAMRFileName, int nChannels, int nBitsPerSample);
	// 将AMR文件解码成WAVE文件
	WIN_RCSDK_API int DecodeAmrToWav(const char* pchAMRFileName, const char* pchWAVEFilename);