Other/IMCRM.ClientDemo/SDK/rcsdk.cs


       [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
       public static extern void DownLoadFile(string targetId, int categoryId, int nType, string pszUrl, ImageListenerEventHandler callback, ImageListenerEventHandler process_callback);

        /*
        ************************************************
        *  讨论组相关函数
        ************************************************
        */

        /**
        *  创建讨论组
        *
        *  @param discussionName 讨论组名称
        *  @param userIds        邀请成员id数组
        *  @param idCount        数组元素个数
        *  @param listener       监听器 推送 成功 - 讨论组id 失败 - 出错原因
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void CreateDiscussion(string discussionName, RcTargetEntry[] userIds, int idCount, CreateDiscussionListenerEventHandler callback);

        /**
        *  退出讨论组
        *
        *  @param discussionId  讨论组id
        *  @param listener      监听器 推送 0 - 成功 非0 - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QuitDiscussion(string discussionId, PublishAckListenerEventHandler callback);

        /**
        *  邀请加入讨论组
        *
        *  @param discussionId 讨论组id
        *  @param userIds      用户id数组
        *  @param idCount      数组原始个数
        *  @param listener     监听器 推送 0 - 成功 非0 - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AddMemberToDiscussion(string discussionId, RcTargetEntry[] userIds, int idCount, PublishAckListenerEventHandler callback);

        /**
        *  将某人踢出讨论组
        *
        *  @param discussionId 讨论组id
        *  @param userId       踢出的用户id
        *  @param listener     监听器 推送 0 - 成功 非0 - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RemoveMemberFromDiscussion(string discussionId, string userId, PublishAckListenerEventHandler callback);

        /**
        *  获取讨论组信息
        *
        *  @param discussionId 讨论组id
        *  @param categoryId   通道类型 只能是 discussion ，此参数稍后将被去掉
        *  @param listener     监听器 推送 0 - 成功，返回讨论组信息 非0 - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetDiscussionInfo(string discussionId, int categoryId, DiscussionInfoListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool GetDiscussionInfoSync(string discussionId, int categoryId, DisInfoSyncEventHandler callback);

        /**
        *  讨论组改名
        *
        *  @param discussionId   讨论组id
        *  @param discussionName 讨论组名称
        *  @param listener       监听器 推送 0 - 成功 非0 - 失败
        */
        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RenameDiscussion(string discussionId, string discussionName, PublishAckListenerEventHandler callback);

        /**
        *  设置讨论组开放成员邀请
        *
        *  @param discussionId 讨论组id
        *  @param inviteStatus 邀请状态 0 - 开放邀请 1 - 关闭开放邀请
        *  @param listener     监听器 推送 0 - 成功 非0 - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetDiscussionInviteStatus(string discussionId, int inviteStatus, PublishAckListenerEventHandler callback);

        /**
        *  设置讨论组、群组会话状态
        *
        *  @param targetId    讨论组id
        *  @param categoryId  类别
        *  @param groupStatus 状态值 406-不在讨论组中 407-讨论组不存在
        *
        *  @return 返回 成功 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool SetGroupStatus(string targetId, int categoryId, int groupStatus);

        /*
        ************************************************
        *  群组相关函数
        ************************************************
        */

        /**
        *  同步群组，将群组发送到服务器
        *
        *  @param groupIds 群组id数组
        *  @param idCount  数组元素个数
        *  @param listener 监听器 推送 0 - 成功 非0 - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SyncGroups(RcTargetEntry[] groupIds, int idCount, PublishAckListenerEventHandler callback);

        /**
        *  加入群组，将群组发送到服务器
        *
        *  @param groupIds 群组id数组
        *  @param idCount  数组元素个数
        *  @param listener 监听器 推送 0 - 成功 非0 - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void JoinGroup(RcTargetEntry[] groupIds, int idCount, PublishAckListenerEventHandler callback);

        /**
        *  退出群组，将群组发送到服务器
        *
        *  @param groupIds 群组id数组
        *  @param idCount  数组元素个数
        *  @param listener 监听器 推送 0 - 成功 非0 - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QuitGroup(RcTargetEntry[] groupIds, int idCount, PublishAckListenerEventHandler callback);

        /**
	    *  加入聊天室
	    *
	    *  @param targetId 聊天室id
	    *  @param categoryId 通道类型
	    *  @param callback 监听器 推送 0 - 成功 非0 - 失败
	    *  @param count 要拉取聊天室的消息条数
	    *  @param flag = false(一般情况下为false) 为true 不清除消息
	    */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void JoinChatRoom(string targetId, int categoryId, int count, PublishAckListenerEventHandler callback,bool flag = false);

        /**
	    *  加入已经存在的聊天室
	    *
	    *  @param targetId 聊天室id
	    *  @param categoryId 通道类型
	    *  @param count 要拉取聊天室的消息条数
	    *  @param callback 监听器 推送 0 - 成功 非0 - 失败
	    * 
	    */
        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]                       
        public static extern void JoinExistingChatRoom(string targetId, int categoryId, int count, PublishAckListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QueryChatroomInfo(string targetId, int count, int order, ChatroomInfoListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void QuitChatRoom(string targetId, int categoryId, PublishAckListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool GetMessageById(int msgId, MessageInfoEventHandler callback);
        /*
        ************************************************
        *  黑名单系列函数
        ************************************************
        */

        /**
        *  加入黑名单
        *
        *  @param userId   用户id
        *  @param listener 监听器 推送 0 - 成功 非0 - 失败
        */
        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AddToBlacklist(string userId, PublishAckListenerEventHandler callback);

        /**
        *  移出黑名单
        *
        *  @param userId   用户id
        *  @param listener 监听器 推送 0 - 成功 非0 - 失败
        */
        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RemoveFromBlacklist(string userId, PublishAckListenerEventHandler callback);

        /**
        *  获取用户黑名单状态
        *
        *  @param userId   用户id
        *  @param listener 监听器 推送 0 - 成功 非0 - 失败
        */
        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetBlacklistStatus(string userId, BizAckListenerEventHandler callback);

        /**
        *  获取黑名单列表
        *
        *  @param listener 监听器 推送 0 - 黑名单列表信息 非0 - 失败
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetBlacklist(BlacklistInfoListenerEventHandler callback);

        /**
        *  设置关闭push时间
        *
        *  @param startTime 关闭起始时间 格式 HH:MM:SS
        *  @param spanMins  间隔分钟数 0 < t < 1440
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetNotificationQuietHours(string startTime, int spanMins, PublishAckListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RemoveNotificationQuietHours(PublishAckListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetNotificationQuietHours(PushSettingListenerEventHandler callback);


        /**
        *  接收应用的环境改变事件通知
        *
        *  @param nType     事件类型，101-网络切换，102-应用进入后台，103-应用进入前台，104-锁屏，105-心跳，106-屏幕解锁
        *  @param pbData    依据nType的事件附加数据，待定
        *  @param nDataSize 数据大小，字节数
        *  @param pListener 事件改变的回调
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void EnvironmentChangeNotify(int nType, string pbData, int nDataSize);

        /**
        *  设置设备信息
        *
        *  @param manufacturer 设备生产商
        *
        *  @param model 设备型号
        *
        *  @param osVersion 设备系统版本
        *
        *  @param network 设备当前使用的网络
        *
        *  @param networkOperator 网络运营商
        */

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetDeviceInfo(string manufacturer, string model, string osVersion, string network, string networkOperator);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SearchPublicServiceProfile(string targetId, int businessType, int searchType, PublishAckListenerEventHandler callback);


        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetUserData(string ext, PublishAckListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void GetUserData(CreateDiscussionListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool GetUserIdByToken(string token, char* data, ref int length);

        /**
        *  设置导航数据监听 
        *
        *  @param listener 监听器
        */
        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SetNaviDataListener(NaviDataListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern bool RemoveMemberFromDiscussionSync(string discussionId, string userId);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void UploadUserInfo(string name, string info, bool flag, TokenListenerEventHandler callback);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void RecallMessage(string messageId);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void EncodeWavToAmr(string pchWAVEFilename, string pchAMRFileName, int nChannels, int nBitsPerSample);

        [DllImport("rcsdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DecodeAmrToWav(string pchAMRFileName, string pchWAVEFilename);
